<resources>
    <string name="app_name">Weather Data</string>
    <string name="settings">Settings</string>
    <string name="chooseCity">Choose City</string>
    <string name="chooseCity2">Choose City 2</string>
    <string name="country">Country</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="done">Done</string>
    <string name="lastUpdated">Last updated: </string>
    <string name="chooseCountry">Choose Country</string>
    <string name="chooseCountry2">Choose Country 2</string>
    <string name="pm25Colon">PM 25:</string>
    <string name="aqiColon">Air Quality Indicator:</string>
    <string name="pm10Colon">PM 10:</string>
    <string name="sulfurDioxideColon">Sulfur Dioxide:</string>
    <string name="ozoneColon">Ozone:</string>
    <string name="noData">No Data</string>
    <string name="loadingWeatherDataFromServer">Loading weather data from server...</string>
    <string name="loadingAirQualityDataFromServer">Loading air quality data from server...</string>
    <string name="measurementTimeColon">Time of measurement:</string>
    <string name="carbonMonoxideColon">Carbon Monoxide:</string>
    <string name="nitrogenDioxideColon">Nitrogen Dioxide:</string>
    <string name="currentAirQuality">Current Air Quality</string>
    <string name="pollutants">Pollutants:</string>
    <string name="aqiLevelGood">Good</string>
    <string name="aqiLevelModerate">Moderate</string>
    <string name="aqiLevelUnhealthyForSensitive">Unhealthy for sensitive groups</string>
    <string name="aqiLevelUnhealthy">Unhealthy</string>
    <string name="aqiLevelVeryUnhealthy">Very unhealthy</string>
    <string name="aqiLevelHazardous">Hazardous</string>
    <string name="aqiLevelOffTheChart">Off the AQI Chart</string>
    <string name="dataProvidedByColon">Data provided by:</string>
    <string name="versioColon">Version:</string>
    <string name="buildTimeColon">Built:</string>
    <string name="couldNotRetrieveVersion">There was a problem retrieving the version number</string>
    <string name="darkMode">Dark Mode</string>
</resources>
