<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/locationLabel"
        android:text="@string/locationColon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/airQualityLocation"
        app:layout_constraintLeft_toRightOf="@id/locationLabel"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/aqiLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/airQualityLocation"
        android:text="@string/aqiColon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/aqiValue"
        app:layout_constraintLeft_toRightOf="@id/aqiLabel"
        app:layout_constraintTop_toBottomOf="@id/airQualityLocation"
        android:textColor="@android:color/black"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/pm10Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aqiValue"
        android:text="@string/pm10Colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/pm10Value"
        app:layout_constraintLeft_toRightOf="@id/pm10Label"
        app:layout_constraintTop_toBottomOf="@id/aqiValue"
        android:textColor="@android:color/black"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/pm25Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pm10Value"
        android:text="@string/pm25Colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/pm25Value"
        app:layout_constraintLeft_toRightOf="@id/pm25Label"
        app:layout_constraintTop_toBottomOf="@id/pm10Value"
        android:textColor="@android:color/black"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/so2Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pm25Value"
        android:text="@string/sulfurDioxideColon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/so2Value"
        app:layout_constraintLeft_toRightOf="@id/so2Label"
        app:layout_constraintTop_toBottomOf="@id/pm25Value"
        android:textColor="@android:color/black"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/ozoneLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/so2Value"
        android:text="@string/ozoneColon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/ozoneValue"
        app:layout_constraintLeft_toRightOf="@id/ozoneLabel"
        app:layout_constraintTop_toBottomOf="@id/so2Value"
        android:textColor="@android:color/black"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/airQualityLastUpdateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/lastUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/airQualityLastUpdateValue"
        app:layout_constraintStart_toEndOf="@id/airQualityLastUpdateLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</android.support.constraint.ConstraintLayout>